2004-03-21  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (init_cheap): Conditionalize debugging code.

2004-03-21  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (init_cheap): Add ability to specify minimal cygwin heap
	size when debugging.
	(_csbrk): Report error in allocation to stderr.
	(ccalloc): Ditto.
	* dtable.cc (dtable::find_fifo): Remove use of atoms.
	* dtable.h (dtable::find_fifo): Ditto.
	* fhandler.h (fhandler_fifo): Ditto.
	* fhandler_fifo.cc (fhandler_fifo::fhandler_fifo): Ditto.
	(fhandler_fifo::set_use): Ditto.
	(fhandler_fifo::open_not_mine): Ditto.
	(fhandler_fifo::open): Ditto.
	* pinfo.cc (_pinfo::commune_recv): Ditto.
	(_pinfo::commune_send): Ditto.

2004-03-19  Pierre Humblet <pierre.humblet@ieee.org>

        * dir.cc (rmdir): Reorganize error handling to reduce indentation.
 
2004-03-19  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump DLL minor number to 10.

2004-03-18  Christopher Faylor  <cgf@redhat.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Reset to new value.
	(child_info::cygheap_alloc_sz): New field.
	* cygheap.cc (init_cheap): Reduce size of cygwin stack until minimal
	hit when attempting initial allocation.
	(cygheap_setup_for_child): Use alloc_sz to create secondary memory
	mapped entry.  Store alloc_sz in cygheap_alloc_sz.
	(cygheap_fixup_in_child): Use cygheap_alloc_sz to map parent's cygheap.
	* cygheap.h (_CYGHEAPSIZE_SLOP): New define.
	(CYGHEAPSIZE): Use _CYGHEAPSIZE_SLOP.

2004-03-18  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_meminfo): On NT, try to figure out
	real swap file usage by requesting SystemPagefileInformation.  Use
	GlobalMemoryStatus as fallback.
	* ntdll.h (_SYSTEM_INFORMATION_CLASS): Add SystemPagefileInformation.
	(struct _SYSTEM_PAGEFILE_INFORMATION): Define.

2004-03-17  Christopher Faylor  <cgf@redhat.com>

	* pipe.cc (fhandler_pipe::dup): Fix debugging message.

2004-03-17  Christopher Faylor  <cgf@redhat.com>
